crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__minute__multiple__range_periodic__specifier.snap
---
source: crates/tools/cron/src/tests/unit/minute.rs
expression: result
---
Ok(
    (
        ",1",
        MinuteRule {
            kinds: [
                MinuteKind {
                    range: (
                        Minute(
                            1,
                        ),
                        Minute(
                            59,
                        ),
                    ),
                    periodic: MinutePeriodic(
                        2,
                    ),
                },
            ],
        },
    ),
)
